--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <div id="content">
     <h1>Tere Bina Sab Khaali Hai, Betta...</h1>
-    <img src="photo1.jpg" alt="Uski yaad" class="photo">
+    <img src="Photo1.jpg" alt="Uski yaad" class="photo">
     <div class="message">
       <p>Hi Betta,</p>
       <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
@@ -80,7 +80,7 @@
       <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
       <div class="signature">Your Betuuu</div>
     </div>
-    <img src="photo2.jpg" alt="Tum dono" class="photo">
+    <img src="Photo2.jpg" alt="Tum dono" class="photo">
     <audio controls autoplay loop>
       <source src="meherbaan_intro.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
