--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom right, #ffd6e8, #ffeaf4);
+      background: #110f2c;
       color: #4a1c32;
       display: flex;
       flex-direction: column;
@@ -16,47 +16,101 @@
       justify-content: center;
       height: 100vh;
       padding: 20px;
+      position: relative;
+      overflow: hidden;
     }
+
+    /* Starry background */
+    .stars {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('https://www.transparenttextures.com/patterns/starry-night.png');
+      animation: moveStars 200s linear infinite;
+    }
+
+    @keyframes moveStars {
+      0% { background-position: 0 0; }
+      100% { background-position: 10000px 10000px; }
+    }
+
     #content {
       display: none;
       text-align: center;
       opacity: 0;
       animation: fadeIn 2s ease-in forwards;
+      width: 100%;
     }
+
     @keyframes fadeIn {
       to {
         opacity: 1;
       }
     }
+
     .photo {
       width: 90%;
       max-width: 300px;
       border-radius: 20px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       margin: 15px 0;
+      animation: zoomIn 1s ease-in-out forwards;
     }
+
+    @keyframes zoomIn {
+      from {
+        transform: scale(0);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
     .message {
-      max-width: 600px;
+      max-width: 90%;
       background-color: #fff0f6;
       border-radius: 15px;
       padding: 20px;
       text-align: center;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      animation: slideIn 1s ease-in-out;
     }
+
+    @keyframes slideIn {
+      from {
+        transform: translateY(30px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
     .signature {
       margin-top: 20px;
       font-weight: bold;
       font-style: italic;
     }
+
     .password-box {
       text-align: center;
+      animation: fadeIn 2s ease-in forwards;
     }
+
     input[type="password"] {
       padding: 10px;
       border-radius: 10px;
       border: 1px solid #aaa;
       margin-top: 10px;
+      width: 100%;
+      max-width: 250px;
     }
+
     button {
       margin-top: 10px;
       padding: 10px 20px;
@@ -66,9 +120,45 @@
       border-radius: 10px;
       cursor: pointer;
     }
+
+    /* Media Queries for responsiveness */
+    @media (max-width: 768px) {
+      .photo {
+        max-width: 250px;
+      }
+
+      .message {
+        padding: 15px;
+      }
+
+      .password-box {
+        width: 100%;
+        padding: 0 20px;
+      }
+
+      button {
+        width: 100%;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .photo {
+        max-width: 220px;
+      }
+
+      .message {
+        padding: 10px;
+      }
+
+      h1 {
+        font-size: 24px;
+      }
+    }
   </style>
 </head>
 <body>
+  <div class="stars"></div>
+
   <div class="password-box">
     <h2>Enter Password to Continue</h2>
     <input type="password" id="passwordInput" placeholder="Enter password" />
