--- a/index.html
+++ b/index.html
@@ -8,191 +8,193 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #110f2c;
-      color: #4a1c32;
+      overflow-x: hidden;
+      background: #0b0c2a;
+      color: #fce4ec;
+      position: relative;
+      min-height: 100vh;
+    }
+
+    /* Animated star background */
+    .stars, .stars2, .stars3 {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: transparent;
+      top: 0;
+      left: 0;
+      z-index: 0;
+    }
+
+    .stars {
+      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/star1.png');
+      animation: starAnim 100s linear infinite;
+    }
+
+    .stars2 {
+      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/star2.png');
+      animation: starAnim 150s linear infinite;
+    }
+
+    .stars3 {
+      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/star3.png');
+      animation: starAnim 200s linear infinite;
+    }
+
+    @keyframes starAnim {
+      from { transform: translateY(0); }
+      to { transform: translateY(-2000px); }
+    }
+
+    .container {
+      position: relative;
+      z-index: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
       padding: 20px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    /* Starry background */
-    .stars {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('https://www.transparenttextures.com/patterns/starry-night.png');
-      animation: moveStars 200s linear infinite;
-    }
-
-    @keyframes moveStars {
-      0% { background-position: 0 0; }
-      100% { background-position: 10000px 10000px; }
-    }
-
-    #content {
-      display: none;
-      text-align: center;
-      opacity: 0;
-      animation: fadeIn 2s ease-in forwards;
-      width: 100%;
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-
-    .photo {
-      width: 90%;
-      max-width: 300px;
-      border-radius: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      margin: 15px 0;
-      animation: zoomIn 1s ease-in-out forwards;
-    }
-
-    @keyframes zoomIn {
-      from {
-        transform: scale(0);
-        opacity: 0;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .message {
-      max-width: 90%;
-      background-color: #fff0f6;
-      border-radius: 15px;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      animation: slideIn 1s ease-in-out;
-    }
-
-    @keyframes slideIn {
-      from {
-        transform: translateY(30px);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-
-    .signature {
-      margin-top: 20px;
-      font-weight: bold;
-      font-style: italic;
     }
 
     .password-box {
       text-align: center;
-      animation: fadeIn 2s ease-in forwards;
+      margin-top: 100px;
+      animation: fadeIn 2s ease-in-out;
     }
 
     input[type="password"] {
-      padding: 10px;
+      padding: 12px;
       border-radius: 10px;
-      border: 1px solid #aaa;
-      margin-top: 10px;
-      width: 100%;
+      border: none;
+      width: 80%;
       max-width: 250px;
     }
 
     button {
       margin-top: 10px;
-      padding: 10px 20px;
-      border: none;
-      background-color: #e75480;
+      padding: 10px 25px;
+      background-color: #e91e63;
       color: white;
+      border: none;
       border-radius: 10px;
       cursor: pointer;
+      font-weight: bold;
     }
 
-    /* Media Queries for responsiveness */
-    @media (max-width: 768px) {
-      .photo {
-        max-width: 250px;
-      }
-
-      .message {
-        padding: 15px;
-      }
-
-      .password-box {
-        width: 100%;
-        padding: 0 20px;
-      }
-
-      button {
-        width: 100%;
-      }
+    #content {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      animation: fadeIn 1.5s ease-in-out forwards;
+      margin-top: 20px;
     }
 
-    @media (max-width: 480px) {
-      .photo {
-        max-width: 220px;
-      }
+    h1 {
+      text-align: center;
+      font-size: 26px;
+      margin: 20px 10px;
+      animation: slideIn 1.2s ease-in-out;
+    }
 
-      .message {
-        padding: 10px;
-      }
+    .photo {
+      width: 95%;
+      max-width: 400px;
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(255,255,255,0.2);
+      margin: 20px 0;
+      animation: zoomIn 1.2s ease-in-out;
+    }
 
-      h1 {
-        font-size: 24px;
-      }
+    .message {
+      background: rgba(255, 240, 246, 0.9);
+      color: #4a1c32;
+      border-radius: 15px;
+      padding: 20px;
+      width: 95%;
+      max-width: 600px;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      animation: fadeInUp 1.4s ease-in-out;
+    }
+
+    .signature {
+      margin-top: 15px;
+      font-weight: bold;
+      font-style: italic;
+      font-size: 18px;
+    }
+
+    audio {
+      margin-top: 20px;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideIn {
+      from { transform: translateX(-100px); opacity: 0; }
+      to { transform: translateX(0); opacity: 1; }
+    }
+
+    @keyframes zoomIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      from { transform: translateY(40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    /* Responsive */
+    @media screen and (max-width: 480px) {
+      h1 { font-size: 22px; }
+      .message { padding: 15px; font-size: 14px; }
+      .signature { font-size: 16px; }
     }
   </style>
 </head>
 <body>
+  <!-- Star layers -->
   <div class="stars"></div>
+  <div class="stars2"></div>
+  <div class="stars3"></div>
 
-  <div class="password-box">
-    <h2>Enter Password to Continue</h2>
-    <input type="password" id="passwordInput" placeholder="Enter password" />
-    <br />
-    <button onclick="checkPassword()">Unlock</button>
-  </div>
-
-  <div id="content">
-    <h1>Tere Bina Sab Khaali Hai, Betta...</h1>
-    <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
-    <div class="message">
-      <p>Hi Betta,</p>
-      <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
-      <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon.</p>
-      <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
-      <div class="signature">Your Betuuu</div>
+  <div class="container">
+    <div class="password-box">
+      <h2>Enter Password to Continue</h2>
+      <input type="password" id="passwordInput" placeholder="Enter password" />
+      <br />
+      <button onclick="checkPassword()">Unlock</button>
     </div>
-    <img src="Photo2.jpg" alt="Tum dono" class="photo" />
-    <audio id="bg-music" loop>
-      <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
-      Your browser does not support the audio element.
-    </audio>
+
+    <div id="content">
+      <h1>Tere Bina Sab Khaali Hai, Betta...</h1>
+      <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
+      <div class="message">
+        <p>Hi Betta,</p>
+        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
+        <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon.</p>
+        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
+        <div class="signature">Your Betuuu</div>
+      </div>
+      <img src="Photo2.jpg" alt="Tum dono" class="photo" />
+      <audio id="bg-music" loop>
+        <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
+    </div>
   </div>
 
   <script>
     function checkPassword() {
-      var input = document.getElementById("passwordInput").value;
+      const input = document.getElementById("passwordInput").value;
       if (input === "7709826839") {
         document.querySelector(".password-box").style.display = "none";
         const content = document.getElementById("content");
-        content.style.display = "block";
-        setTimeout(() => {
-          content.style.opacity = "1";
-        }, 100);
+        content.style.display = "flex";
         document.getElementById("bg-music").play();
       } else {
         alert("Wrong password. Try again.");
