--- a/index.html
+++ b/index.html
@@ -1,205 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Private - Betta Ke Liye</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      overflow-x: hidden;
-      background: #0b0c2a;
-      color: #fce4ec;
-      position: relative;
-      min-height: 100vh;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Private - Betta Ke Liye</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #0b0c2a;
+      color: #fce4ec;
+      position: relative;
+      min-height: 100vh;
+      overflow: hidden;
+    } 
 
-    /* Animated star background */
-    .stars, .stars2, .stars3 {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: transparent;
-      top: 0;
-      left: 0;
-      z-index: 0;
-    }
+    /* Star background using CSS */
+    body::before, body::after {
+      content: '';
+      position: absolute;
+      width: 200%;
+      height: 200%;
+      background: transparent;
+      top: -50%;
+      left: -50%;
+      z-index: 0;
+      background-image: radial-gradient(white 1px, transparent 1px);
+      background-size: 2px 2px;
+      animation: starMove 200s linear infinite;
+    } 
 
-    .stars {
-      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/star1.png');
-      animation: starAnim 100s linear infinite;
-    }
+    body::after {
+      background-image: radial-gradient(#fff 1px, transparent 1px);
+      background-size: 3px 3px;
+      opacity: 0.5;
+      animation-duration: 300s;
+    } 
 
-    .stars2 {
-      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/star2.png');
-      animation: starAnim 150s linear infinite;
-    }
+    @keyframes starMove {
+      0% { transform: translate(0, 0); }
+      100% { transform: translate(100px, 100px); }
+    } 
 
-    .stars3 {
-      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/star3.png');
-      animation: starAnim 200s linear infinite;
-    }
+    .container {
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    } 
 
-    @keyframes starAnim {
-      from { transform: translateY(0); }
-      to { transform: translateY(-2000px); }
-    }
+    .password-box {
+      text-align: center;
+      margin-top: 100px;
+      animation: fadeIn 2s ease-in-out;
+    } 
 
-    .container {
-      position: relative;
-      z-index: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    }
+    input[type="password"] {
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      width: 80%;
+      max-width: 250px;
+    } 
 
-    .password-box {
-      text-align: center;
-      margin-top: 100px;
-      animation: fadeIn 2s ease-in-out;
-    }
+    button {
+      margin-top: 10px;
+      padding: 10px 25px;
+      background-color: #e91e63;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+    } 
 
-    input[type="password"] {
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      width: 80%;
-      max-width: 250px;
-    }
+    #content {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      animation: fadeIn 1.5s ease-in-out forwards;
+      margin-top: 20px;
+    } 
 
-    button {
-      margin-top: 10px;
-      padding: 10px 25px;
-      background-color: #e91e63;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-weight: bold;
-    }
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      margin: 20px 10px;
+      animation: slideIn 1.2s ease-in-out;
+      color: #ffb3d9;
+      text-shadow: 0 0 10px #ff80ab;
+    } 
 
-    #content {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      animation: fadeIn 1.5s ease-in-out forwards;
-      margin-top: 20px;
-    }
+    .photo {
+      width: 95%;
+      max-width: 400px;
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(255,255,255,0.2);
+      margin: 20px 0;
+      animation: zoomIn 1.2s ease-in-out;
+    } 
 
-    h1 {
-      text-align: center;
-      font-size: 26px;
-      margin: 20px 10px;
-      animation: slideIn 1.2s ease-in-out;
-    }
+    .message {
+      background: rgba(255, 240, 246, 0.9);
+      color: #4a1c32;
+      border-radius: 15px;
+      padding: 20px;
+      width: 95%;
+      max-width: 600px;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      animation: fadeInUp 1.4s ease-in-out;
+    } 
 
-    .photo {
-      width: 95%;
-      max-width: 400px;
-      border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(255,255,255,0.2);
-      margin: 20px 0;
-      animation: zoomIn 1.2s ease-in-out;
-    }
+    .signature {
+      margin-top: 15px;
+      font-weight: bold;
+      font-style: italic;
+      font-size: 18px;
+    } 
 
-    .message {
-      background: rgba(255, 240, 246, 0.9);
-      color: #4a1c32;
-      border-radius: 15px;
-      padding: 20px;
-      width: 95%;
-      max-width: 600px;
-      text-align: center;
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
-      animation: fadeInUp 1.4s ease-in-out;
-    }
+    audio {
+      margin-top: 20px;
+    } 
 
-    .signature {
-      margin-top: 15px;
-      font-weight: bold;
-      font-style: italic;
-      font-size: 18px;
-    }
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    } 
 
-    audio {
-      margin-top: 20px;
-    }
+    @keyframes slideIn {
+      from { transform: translateX(-100px); opacity: 0; }
+      to { transform: translateX(0); opacity: 1; }
+    } 
 
-    /* Animations */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+    @keyframes zoomIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    } 
 
-    @keyframes slideIn {
-      from { transform: translateX(-100px); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-    }
+    @keyframes fadeInUp {
+      from { transform: translateY(40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    } 
 
-    @keyframes zoomIn {
-      from { transform: scale(0.8); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
-
-    @keyframes fadeInUp {
-      from { transform: translateY(40px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
-    /* Responsive */
-    @media screen and (max-width: 480px) {
-      h1 { font-size: 22px; }
-      .message { padding: 15px; font-size: 14px; }
-      .signature { font-size: 16px; }
-    }
-  </style>
+    @media screen and (max-width: 480px) {
+      h1 { font-size: 22px; }
+      .message { padding: 15px; font-size: 14px; }
+      .signature { font-size: 16px; }
+    }
+  </style>
 </head>
 <body>
-  <!-- Star layers -->
-  <div class="stars"></div>
-  <div class="stars2"></div>
-  <div class="stars3"></div>
+  <div class="container">
+    <div class="password-box">
+      <h2>Enter Password to Continue</h2>
+      <input type="password" id="passwordInput" placeholder="Enter password" />
+      <br />
+      <button onclick="checkPassword()">Unlock</button>
+    </div> 
 
-  <div class="container">
-    <div class="password-box">
-      <h2>Enter Password to Continue</h2>
-      <input type="password" id="passwordInput" placeholder="Enter password" />
-      <br />
-      <button onclick="checkPassword()">Unlock</button>
-    </div>
+    <div id="content">
+      <h1>I lovee youu sooo muchh betttaa</h1>
+      <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
+      <div class="message">
+        <p>Hi Betta,</p>
+        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
+        <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon.</p>
+        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
+        <div class="signature">Your Betuuu</div>
+      </div>
+      <img src="Photo2.jpg" alt="Tum dono" class="photo" />
+      <audio id="bg-music" loop>
+        <source src="Kaira.mp3" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+  </div> 
 
-    <div id="content">
-      <h1>Tere Bina Sab Khaali Hai, Betta...</h1>
-      <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
-      <div class="message">
-        <p>Hi Betta,</p>
-        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
-        <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon.</p>
-        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
-        <div class="signature">Your Betuuu</div>
-      </div>
-      <img src="Photo2.jpg" alt="Tum dono" class="photo" />
-      <audio id="bg-music" loop>
-        <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-  </div>
-
-  <script>
-    function checkPassword() {
-      const input = document.getElementById("passwordInput").value;
-      if (input === "7709826839") {
-        document.querySelector(".password-box").style.display = "none";
-        const content = document.getElementById("content");
-        content.style.display = "flex";
-        document.getElementById("bg-music").play();
-      } else {
-        alert("Wrong password. Try again.");
-      }
-    }
-  </script>
+  <script>
+    function checkPassword() {
+      const input = document.getElementById("passwordInput").value;
+      if (input === "7709826839") {
+        document.querySelector(".password-box").style.display = "none";
+        const content = document.getElementById("content");
+        content.style.display = "flex";
+        document.getElementById("bg-music").play();
+      } else {
+        alert("Wrong password. Try again.");
+      }
+    }
+  </script>
 </body>
 </html>
