--- a/index.html
+++ b/index.html
@@ -8,65 +8,38 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #000;
       color: #fce4ec;
+      position: relative;
+      min-height: 100vh;
       overflow: hidden;
+      background: #0b0c2a;
     }
 
-    /* Galaxy background */
-    body::before {
+    /* Star and galaxy background using CSS */
+    body::before, body::after {
       content: '';
-      position: fixed;
+      position: absolute;
       width: 200%;
       height: 200%;
+      background: transparent;
       top: -50%;
       left: -50%;
-      background: radial-gradient(circle at 50% 50%, #1a0022, #000000 90%);
-      animation: moveGalaxy 100s linear infinite;
-      z-index: -3;
-    }
-
-    /* Stars */
-    body::after {
-      content: '';
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: transparent;
-      z-index: -2;
+      z-index: 0;
       background-image: radial-gradient(white 1px, transparent 1px);
+      background-size: 2px 2px;
+      animation: starMove 200s linear infinite;
+    }
+
+    body::after {
+      background-image: radial-gradient(#fff 1px, transparent 1px);
       background-size: 3px 3px;
-      animation: moveStars 200s linear infinite;
-      opacity: 0.3;
+      opacity: 0.5;
+      animation-duration: 300s;
     }
 
-    /* Moon */
-    .moon {
-      position: fixed;
-      top: 50px;
-      right: 50px;
-      width: 80px;
-      height: 80px;
-      background: radial-gradient(circle at 30% 30%, #fff, #ccc 70%);
-      border-radius: 50%;
-      box-shadow: 0 0 30px #fff;
-      z-index: -1;
-      animation: moonFloat 5s ease-in-out infinite alternate;
-    }
-
-    @keyframes moveGalaxy {
-      0% { transform: rotate(0deg) scale(1); }
-      100% { transform: rotate(360deg) scale(1.2); }
-    }
-
-    @keyframes moveStars {
-      0% { background-position: 0 0; }
-      100% { background-position: 1000px 1000px; }
-    }
-
-    @keyframes moonFloat {
-      0% { transform: translateY(0); }
-      100% { transform: translateY(10px); }
+    @keyframes starMove {
+      0% { transform: translate(0, 0); }
+      100% { transform: translate(100px, 100px); }
     }
 
     .container {
@@ -76,12 +49,11 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
-      min-height: 100vh;
-      justify-content: center;
     }
 
     .password-box {
       text-align: center;
+      margin-top: 100px;
       animation: fadeIn 2s ease-in-out;
     }
 
@@ -174,6 +146,7 @@
       to { transform: translateY(0); opacity: 1; }
     }
 
+    /* Mobile optimization */
     @media screen and (max-width: 480px) {
       h1 { font-size: 22px; }
       .message { padding: 15px; font-size: 14px; }
@@ -182,9 +155,8 @@
   </style>
 </head>
 <body>
-  <div class="moon"></div>
   <div class="container">
-    <div class="password-box" id="passwordBox">
+    <div class="password-box">
       <h2>Enter Password to Continue</h2>
       <input type="password" id="passwordInput" placeholder="Enter password" />
       <br />
@@ -192,18 +164,18 @@
     </div>
 
     <div id="content">
-      <h1>I lovee youu sooo muchh betttaa</h1>
+      <h1>I lovee youu sooo muchh betttaa 💕♾️🫂</h1>
       <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
       <div class="message">
-        <p>Hi Betta,</p>
-        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
-        <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon.</p>
-        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
-        <div class="signature">Your Betuuu</div>
+        <p>Hi Betta, 💖</p>
+        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye. 😘</p>
+        <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon. ♥️🧿</p>
+        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon. 🥺❤️</p>
+        <div class="signature">Your Betuuu 💕</div>
       </div>
       <img src="Photo2.jpg" alt="Tum dono" class="photo" />
       <audio id="bg-music" loop>
-        <source src="Kaira.mp3" type="audio/mpeg" />
+        <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
         Your browser does not support the audio element.
       </audio>
     </div>
@@ -213,7 +185,7 @@
     function checkPassword() {
       const input = document.getElementById("passwordInput").value;
       if (input === "7709826839") {
-        document.getElementById("passwordBox").style.display = "none";
+        document.querySelector(".password-box").style.display = "none";
         const content = document.getElementById("content");
         content.style.display = "flex";
         document.getElementById("bg-music").play();
